# halide-to-mlir

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yaml
include/mlir/Conversion/: CMakeLists.txt  Passes.hh  Passes.td
include/mlir/Conversion/HalideToArith/: HalideToArith.hh
include/mlir/Conversion/HalideToFunc/: HalideToFunc.hh
include/mlir/Conversion/HalideToMath/: HalideToMath.hh
include/mlir/Conversion/HalideToMemRef/: HalideToMemRef.hh
include/mlir/Conversion/HalideToSCF/: HalideToSCF.hh
include/mlir/Dialect/Halide/IR/: CMakeLists.txt  HalideOps.hh  HalideOps.td
include/mlir/Dialect/Halide/Transforms/: CMakeLists.txt  Passes.hh  Passes.td
include/mlir/Dialects/Halide/IR/: HalideOps.h  HalideOps.td
lib/: CMakeLists.txt
lib/Conversion/: CMakeLists.txt
lib/Conversion/HalideToArith/: CMakeLists.txt  HalideToArith.cc
lib/Conversion/HalideToFunc/: CMakeLists.txt  HalideToFunc.cc
lib/Conversion/HalideToMath/: CMakeLists.txt  HalideToMath.cc
lib/Conversion/HalideToMemref/: CMakeLists.txt  HalideToMemRef.cc
lib/Conversion/HalideToSCF/: CMakeLists.txt  HalideToSCF.cc
lib/Dialect/Halide/IR/: HalideOps.cc
lib/Dialect/Halide/Transforms/: CMakeLists.txt  Let2Reg.cc
lib/Dialects/Halide/IR/: CMakeLists.txt  HalideOps.cc
tests/: CMakeLists.txt  lit.cmake.cfg.py  lit.cmake.site.cfg.py.in
tests/Conversion/HalideToArith/: arithmetic.mlir  callop.mlir  comparison.mlir  logical.mlir  select_cast.mlir
tests/Conversion/HalideToFunc/: halide-to-func.mlir
tests/Conversion/HalideToMath/: halide-to-math.mlir
tests/Conversion/HalideToMemref/: buffer_helper.mlir  load_store.mlir  memref.mlir
tests/Conversion/HalideToSCF/: halide-to-scf.mlir
tests/Dialect/Halide/Tramsforms/: let2reg.mlir
tools/: CMakeLists.txt
tools/halide-opt/: CMakeLists.txt  halide-opt.cc
